<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_ptj"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008b8b"
    tools:context="com.example.salarycalc.AddPTJActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="89dp">

    <TextView
        android:id="@+id/lblJob"
        android:layout_width="475dp"
        android:layout_height="50dp"
        android:layout_marginBottom="39dp"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/frame_style"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="12dp"
        android:text="@string/text_name"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/lblSalary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/lblSalary"
        android:layout_width="475dp"
        android:layout_height="50dp"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="173dp"
        android:layout_weight="1"
        android:background="@drawable/frame_style"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="12dp"
        android:text="@string/text_salary"
        android:textSize="9pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/txtJob"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="118dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="118dp"
        android:layout_marginStart="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/lblJob"
        app:layout_constraintLeft_toLeftOf="@+id/lblJob"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblJob"
        app:layout_constraintVertical_bias="0.625"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/txtSalary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/lblSalary"
        app:layout_constraintTop_toTopOf="@+id/lblSalary"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="191dp"
        android:layout_marginEnd="191dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="191dp"
        android:layout_marginRight="191dp" />

    <Button
        android:id="@+id/button_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="dataInput"
        android:text="@string/text_clear"
        android:textSize="8pt"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/lblSalary"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btCheck"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:onClick="showData"
        android:text="@string/text_check"
        android:textSize="8pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_entry"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="toTop"
        android:text="@string/text_2top"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/text_yen"
        app:layout_constraintBottom_toBottomOf="@+id/txtSalary"
        app:layout_constraintLeft_toRightOf="@+id/txtSalary"
        app:layout_constraintTop_toTopOf="@+id/txtSalary"
        app:layout_constraintVertical_bias="0.72"
        tools:layout_constraintLeft_creator="1" />


</android.support.constraint.ConstraintLayout>
