<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_shift"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008b8b"
    tools:context="com.example.salarycalc.AddShiftActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btAddB"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_weight="0.53"
        android:onClick="toAddPTJ"
        android:text="@string/button_add_ptj"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="@+id/btAddS"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btAddS"
        app:layout_constraintTop_toTopOf="@+id/btAddS"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btAddS"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginTop="7dp"
        android:onClick="toAddShift"
        android:text="@string/button_add_shift"
        android:textSize="8pt"
        app:layout_constraintLeft_toRightOf="@+id/btAddB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/show_shift"
        android:layout_width="557dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="18dp"
        android:layout_weight="0.53"
        android:background="@drawable/frame_style"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/text_temp"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/lblSum"
        app:layout_constraintLeft_toRightOf="@+id/btAddB"
        app:layout_constraintRight_toRightOf="@+id/btAddB"
        app:layout_constraintTop_toBottomOf="@+id/btAddB"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/lblSum"
        android:layout_width="217dp"
        android:layout_height="43dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="23dp"
        android:background="@drawable/frame_style"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:textSize="8pt"
        android:gravity="right|top"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="173dp"
        android:layout_marginRight="23dp"
        tools:layout_editor_absoluteX="361dp" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:onClick="dbClear"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>